Made minor changes and Implemented Best practices